kubernetes/base/kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: images
spec:
  replicas: 3
  selector:
    matchLabels:
      app: images
  template:
    metadata:
      labels:
        app: images
    spec:
      containers:
        - name: images
          image: nginx
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: images
spec:
  selector:
    app: images
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingress-images
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`images.the-form.io`)
      kind: Rule
      services:
        - name: images
          port: 80
  tls: {}
